tests/invalid/if_garbage.turtle
if (5 + ) {
    move 1
}